--- a/templates/confirmar_pago.html
+++ b/templates/confirmar_pago.html
@@ -12,7 +12,7 @@ content %}
   <div id="card-element">
     <!-- A Stripe Element will be inserted here. -->
   </div>
-  <button type="submit">Pagar</button>
+  <button type="submit" class="btn-gradient">Pagar</button>
 </form>
 
 <script src="https://js.stripe.com/v3/"></script>
