--- a/templates/confirmar_transferencias.html
+++ b/templates/confirmar_transferencias.html
@@ -11,14 +11,14 @@
       method="POST"
       action="{{ url_for('confirmar_transferencia', venta_id=venta.id) }}"
     >
-      <button type="submit">Confirmar Transferencia</button>
+      <button type="submit" class="btn-gradient success">Confirmar Transferencia</button>
     </form>
     <form
       method="POST"
       action="{{ url_for('rechazar_transferencia', venta_id=venta.id) }}"
     >
       <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-      <button type="submit">Rechazar Transferencia</button>
+      <button type="submit" class="btn-ghost-gradient danger">Rechazar Transferencia</button>
     </form>
   </li>
   {% endfor %}
