--- a/templates/nueva_seccion.html
+++ b/templates/nueva_seccion.html
@@ -5,21 +5,21 @@ content %}
 <form method="POST">
   <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
   <label for="titulo">Título:</label>
-  <input type="text" name="titulo" required />
+  <input type="text" name="titulo" class="input-gradient" required />
   <br />
   <label for="descripcion">Descripción:</label>
-  <textarea name="descripcion" required></textarea>
+  <textarea name="descripcion" class="input-gradient" required></textarea>
   <br />
   <label for="video_url">URL del Video:</label>
-  <input type="text" name="video_url" required />
+  <input type="text" name="video_url" class="input-gradient" required />
   <br />
 
   <label for="video_file">Archivo de Video:</label>
-  <input type="file" id="video_file" name="video_file" accept="video/mp4" />
+  <input type="file" id="video_file" name="video_file" class="input-gradient" accept="video/mp4" />
   <br />
   <label for="es_gratis">¿Es Gratis?</label>
   <input type="checkbox" name="es_gratis" />
   <br />
-  <button type="submit">Crear Sección</button>
+  <button type="submit" class="btn-gradient">Crear Sección</button>
 </form>
 {% endblock %}
